--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,7 +135,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #787878;
+		color: #464b54;
 		font-weight: 400;
 		line-height: 1em;
 		margin: 0 0 1em 0;
@@ -3298,7 +3298,7 @@ input, select, textarea {
 }
 
 #timeline section.year section ul.research {
-	color: #8C1515;
+	color: #313987;
 }
 
 @media (min-width: 62em) {
