--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1790,6 +1790,46 @@ input, select, textarea {
 		line-height: 1.5em;
 	}
 
+	#header > nav {
+		-moz-flex-grow: 1;
+		-webkit-flex-grow: 1;
+		-ms-flex-grow: 1;
+		flex-grow: 1;
+	}
+		#header > nav ul {
+			list-style: none;
+			margin: 0;
+			padding: 0;
+		}
+
+			#header > nav ul li {
+				border-top: solid 2px #8C1515;
+				display: block;
+				padding: 0;
+			}
+
+				#header > nav ul li a {
+					-moz-transition: none;
+					-webkit-transition: none;
+					-ms-transition: none;
+					transition: none;
+					border: 0;
+					color: #ffffff !important;
+					display: block;
+					padding: 0.5em 0;
+					text-decoration: none;
+				}
+
+					#header > nav ul li a.active {
+						background: #fff;
+						color: #007662 !important;
+						font-weight: bold;
+					}
+
+				#header > nav ul li:first-child {
+					border-top: 0;
+				}
+
 	header.major h2 {
 		font-size: 2em;
 	}
